--- a/css/about.css
+++ b/css/about.css
@@ -15,6 +15,7 @@
     margin: auto;
     display: flex;
     flex-direction: column;
+    padding: 0 15px;
 }
 
 .black-sugar {
@@ -26,6 +27,8 @@
     z-index: 1;
 }
 
+
+/* 想再討論的地方 勿砍 */
 /* .container-about-us-title {
     display: flex;
     padding-left: 10%;
@@ -70,7 +73,7 @@ h2 {
 
 .about-card-group-text-animation-top {
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     margin-bottom: 60px;
     padding-left: 10%;
     margin-right: 50px;
@@ -78,19 +81,42 @@ h2 {
 
 .about-card-group-text-animation-botton {
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     margin-bottom: 60px;
     padding-left: 10%;
     margin-right: 50px;
 }
 
+@media screen and (min-width:480px) {
+    .about-card-group-text-animation-top {
+        flex-direction: row;
+    }
+
+    .about-card-group-text-animation-bottom {
+        flex-direction: row;
+    }
+}
+
 .about-card-group-img {
+    margin: auto;
     width: 106px;
+}
+
+@media screen and (min-width:480px) {
+    .about-card-group-img {
+        margin: unset;
+    }
+
 }
 
 .about-card-group-text {
     color: white;
-    margin-left: 30px;
+}
+
+@media screen and (min-width:480px) {
+    .about-card-group-text {
+        margin-left: 30px;
+    }
 }
 
 .about-card-group-text h2 {
