--- a/css/classic.css
+++ b/css/classic.css
@@ -54,7 +54,7 @@
 }
 
 #classic .container {
-    padding: 40px;
+    padding: 50px 15px;
     width: 100%;
     margin: auto;
 }
@@ -106,6 +106,7 @@
 }
 
 #classic .drink-circle {
+    margin-top: 70px;
     width: 100%;
     height: 500%;
     border: 1px solid #f4dd97;
