--- a/css/social.css
+++ b/css/social.css
@@ -1,6 +1,6 @@
 @media(min-width:481px) {
   #social .container {
-    width: 454px;
+    max-width: 454px;
   }
 
   #social .card-body {
@@ -16,7 +16,7 @@
 
 @media(min-width:576px) {
   #social .container {
-    width: 540px;
+    max-width: 540px;
   }
 
   #social .card-body {
@@ -31,7 +31,7 @@
 
 @media(min-width:768px) {
   #social .container {
-    width: 720px;
+    max-width: 720px;
   }
 
   #social .card-body {
@@ -41,7 +41,7 @@
 
 @media(min-width:992px) {
   #social .container {
-    width: 960px;
+    max-width: 960px;
   }
 
   #social .card-body {
@@ -51,7 +51,7 @@
 
 @media(min-width:1200px) {
   #social .container {
-    width: 1140px;
+    max-width: 1140px;
   }
 
   #social .card-body {
@@ -66,11 +66,9 @@
 }
 
 #social .container {
-  max-width: 1110px;
-  max-height: 655px;
-  padding-right: 15px;
-  padding-left: 15px;
+  padding: 0 15px;
   margin: auto;
+  width: 100%;
 }
 
 #social .header {
