--- a/css/franchisee.css
+++ b/css/franchisee.css
@@ -11,10 +11,9 @@
 }
 
 .franchisee-container-big {
-    height: 100px;
     width: 100%;
-    padding: 20% 15px 0;
     margin: auto;
+    padding: 50px;
 }
 
 .franchisee-container-animation {
@@ -80,44 +79,34 @@
 
 .container-franchisee-title {
     width: 100%;
-    z-index: 3;
+    display: flex;
+    flex-direction: column;
 }
 
 .franchisee-icon {
     background-image: url('../images/nav/icon1-5.png');
-    background-size: contain;
+    background-size: cover;
     background-repeat: no-repeat;
     width: 32px;
     height: 32px;
-    float: left;
-    margin-right: 6px;
-    float: left;
+    margin-right: 4px;
 }
 
 .franchisee-title {
-    width: 150px;
-    height: 50px;
     color: white;
-    position: absolute;
-    left: 10%;
-    top: 50px;
     display: flex;
-    flex-direction: row;
-}
-
-.franchisee-title h1,
-h2 {
-    font-size: 14px;
-    font-weight: 500;
+    padding:  15px;
 }
 
 .franchisee-title h1 {
-    margin: 0;
+    font-size: 14px;
+    margin-bottom: 0;
+    margin-top: 5px;
 }
 
 .franchisee-title h2 {
-    margin-top: 0px;
-    margin-bottom: 8px;
+    font-size: 12px;
+    margin-top: 0;
 }
 
 .franchisee-link {
@@ -125,7 +114,7 @@ h2 {
 }
 
 #franchisee .container {
-    max-width: 100%;
+    width: 100%;
 }
 
 @media screen and (min-width:576px) {
