--- a/css/classic.css
+++ b/css/classic.css
@@ -173,6 +173,7 @@
 #classic .intro-logo{
     width: 50px;
     margin-right: 15px;
+    margin-top: 50%;
 }
 #classic .step-2{
     margin: 50px 0;
@@ -232,7 +233,7 @@
         max-width: 1140px;
     }
     #classic .menu-up{
-        display: grid;
+        display: flex;
         grid-template-columns: 1fr 1fr 1fr 1fr;
     }
     #classic .menu-type{
