--- a/css/about.css
+++ b/css/about.css
@@ -18,6 +18,42 @@
     padding: 0 15px;
 }
 
+#about .about-header{
+    height: 10vh;
+    margin: 0;
+}
+
+#about .title-position{
+    width: 100%;
+    margin: auto;
+    margin-top: 50px;
+}
+
+@media screen and (min-width:576px) {
+    #about .title-position {
+        max-width: 540px;
+    }
+}
+
+@media screen and (min-width:768px) {
+    #about .title-position {
+        max-width: 720px;
+    }
+}
+
+@media screen and (min-width:992px) {
+    #about .title-position {
+        max-width: 960px;
+    }
+
+}
+
+@media screen and (min-width:1200px) {
+    #about .title-position {
+        max-width: 1140px;
+    }
+}
+
 .black-sugar {
     aspect-ratio: 23 / 4;
     background-image: url('../images/background_img/section_header.webp');
@@ -25,16 +61,14 @@
     background-size: contain;
     background-repeat: no-repeat;
     z-index: 1;
+    position: relative;
 }
 
 
-/* 想再討論的地方 勿砍 */
-/* .container-about-us-title {
-    display: flex;
-    padding-left: 10%;
-    position: absolute;
-    top: 5%;
-} */
+.container-about-us-title {
+    position: relative;
+    z-index: 2;
+}
 
 .about-us-icon {
     background-image: url('../images/nav/icon1-1.png');
@@ -66,7 +100,7 @@ h2 {
 }
 
 .about-card-group-container {
-    margin: 80px auto 0;
+    margin: 80px 0 0;
     z-index: 3;
     position: relative;
 }
@@ -75,7 +109,6 @@ h2 {
     display: flex;
     flex-direction: column;
     margin-bottom: 60px;
-    padding-left: 10%;
     margin-right: 50px;
 }
 
@@ -83,7 +116,6 @@ h2 {
     display: flex;
     flex-direction: column;
     margin-bottom: 60px;
-    padding-left: 10%;
     margin-right: 50px;
 }
 
@@ -92,7 +124,7 @@ h2 {
         flex-direction: row;
     }
 
-    .about-card-group-text-animation-bottom {
+    .about-card-group-text-animation-botton {
         flex-direction: row;
     }
 }
@@ -121,6 +153,11 @@ h2 {
 
 .about-card-group-text h2 {
     font-size: 20px;
+    margin-top: 0;
+}
+
+.about-card-group-text p {
+    font-size: 14px;
 }
 
 .cloud-left {
