--- a/css/classic.css
+++ b/css/classic.css
@@ -1,88 +1,109 @@
-#classic .pd{
+#classic .pd {
     padding: 30px 0;
 }
-#classic .padding-margin{
+
+#classic .padding-margin {
     padding: 0%;
     margin: 0%;
 }
-#classic .df{
+
+#classic .df {
     display: flex;
 }
-#classic .justbet{
+
+#classic .justbet {
     justify-content: space-between;
 }
-#classic .text-height{
+
+#classic .text-height {
     line-height: 20px;
-} 
-#classic .text12{
+}
+
+#classic .text12 {
     font-size: 12px;
 }
-#classic .text14{
+
+#classic .text14 {
     font-size: 14px;
 }
-#classic .text14-4{
+
+#classic .text14-4 {
     font-size: 14.4px;
 }
-#classic .text18{
+
+#classic .text18 {
     font-size: 18px;
     color: #f4dd97;
 }
-#classic .text21-6{
+
+#classic .text21-6 {
     margin-bottom: 10px;
     font-size: 21.6px;
 }
-#classic .mgt40{
+
+#classic .mgt40 {
     margin-top: 40px;
 }
-#classic .mgt20{
+
+#classic .mgt20 {
     margin-top: 20px;
 }
-#classic .mgt10{
+
+#classic .mgt10 {
     margin-top: 10px;
 }
-#classic .text20{
+
+#classic .text20 {
     font-size: 20px;
 }
-#classic .color-gray{
+
+#classic .color-gray {
     color: gray;
     margin-top: 10px;
 }
-#classic .container{
-    max-width: 720px;
+
+#classic .container {
+    width: 100%;
     padding: 40px;
     margin: auto;
 }
+
 #classic .section_content {
     position: relative;
     background-size: cover;
     background-position: 100% 0;
     padding-bottom: 80px;
     z-index: 2;
-    background-image: url(./images/background_img/about_bg.png) ;
+    background-image: url(./images/background_img/about_bg.png);
     margin-top: 0;
 }
- #classic .title img{
+
+#classic .title img {
     width: 32px;
     margin-top: 10px;
- }
- #classic .menu-logo-group{
-    position: relative ;
- }
- #classic .menu-logo{
+}
+
+#classic .menu-logo-group {
+    position: relative;
+}
+
+#classic .menu-logo {
     display: block;
     margin: 0 auto;
     max-width: 30vw;
     min-width: 250px;
     width: 80%;
-    filter: drop-shadow(0 0 10px #f4dd97); 
- }
- #classic .menu-drink {
+    filter: drop-shadow(0 0 10px #f4dd97);
+}
+
+#classic .menu-drink {
     position: relative;
     z-index: 2;
     display: block;
     max-width: 350px;
     margin: 75px auto 0;
 }
+
 #classic .drink-shape {
     position: absolute;
     top: 0;
@@ -91,6 +112,7 @@
     width: 50%;
     overflow: hidden;
 }
+
 #classic .drink-circle {
     width: 100%;
     height: 500%;
@@ -98,6 +120,7 @@
     border-radius: 100% 100% 0 100%/50%;
     border-bottom: none;
 }
+
 #classic .drink-shadow {
     position: absolute;
     z-index: 1;
@@ -111,6 +134,7 @@
 #classic .cold-hot-info {
     margin: 0 5%;
 }
+
 #classic .cold-drink-span {
     display: inline-block;
     background: #00A199;
@@ -119,6 +143,7 @@
     border-radius: 50%;
     margin-right: 15px;
 }
+
 #classic .hot-drink-span {
     display: inline-block;
     background: #E95513;
@@ -127,20 +152,25 @@
     border-radius: 50%;
     margin-right: 15px;
 }
+
 #classic .cold-drink-info {
     color: #00A199;
 }
+
 #classic .hot-drink-info {
     margin-left: 30px;
     color: #E95513;
 }
-#classic h4{
+
+#classic h4 {
     text-align: center;
 }
-#classic li{
+
+#classic li {
     list-style: none;
 }
-#classic .gold-border{
+
+#classic .gold-border {
     margin-top: 50px;
     border: 1px solid #f4dd97;
     padding: 0 20px 40px 20px;
@@ -148,7 +178,8 @@
     width: 100%;
     margin: auto;
 }
-#classic .menu-type{
+
+#classic .menu-type {
     margin-top: 40px;
     padding: 40px 15px;
 }
@@ -156,6 +187,7 @@
 #classic .small-dot {
     margin-top: 6px;
 }
+
 #classic .small-dot div.cold {
     background: #00A199;
     width: 10px;
@@ -163,6 +195,7 @@
     border-radius: 50%;
     margin-right: 5px;
 }
+
 #classic .small-dot div.hot {
     background: #E95513;
     width: 10px;
@@ -170,25 +203,31 @@
     border-radius: 50%;
     margin-right: 5px;
 }
-#classic .intro-logo{
+
+#classic .intro-logo {
     width: 50px;
     margin-right: 15px;
     margin-top: 50%;
 }
-#classic .step-2{
+
+#classic .step-2 {
     margin: 50px 0;
 }
-#classic .parallax-1 img{
+
+#classic .parallax-1 img {
     max-width: 576px;
 }
-#classic .parallax-2 img{
+
+#classic .parallax-2 img {
     max-width: 576px;
 }
+
 #classic .parallax-block {
     position: relative;
     width: 100%;
     height: 550px;
 }
+
 #classic .bg-wrap {
     clip: rect(0, auto, auto, 0);
     position: absolute;
@@ -216,51 +255,47 @@
     background-position: center 30%;
 }
 
-@media (min-width: 576px){
-    #classic .container{
-        min-width: 540px;
+@media (min-width: 576px) {
+    #classic .container {
+        max-width: 540px;
     }
 }
 
-@media (min-width: 992px){
-    #classic .container{
+@media (min-width: 768px) {
+    #classic .container {
+        max-width: 720px;
+    }
+}
+
+@media (min-width: 992px) {
+    #classic .container {
         max-width: 960px;
     }
 }
 
-@media (min-width: 1200px){
-    #classic .container{
+@media (min-width: 1200px) {
+    #classic .container {
         max-width: 1140px;
     }
-    #classic .menu-up{
-        display: flex;
-        grid-template-columns: 1fr 1fr 1fr 1fr;
-    }
-    #classic .menu-type{
-        width: 285px;
-    }
-    
-}
 
-@media (min-width: 1920px){
-    #classic .container{
-        max-width: 1140px;
-    }
-    #classic .menu-up{
+    #classic .menu-up {
         display: grid;
         grid-template-columns: 1fr 1fr 1fr 1fr;
     }
-    #classic .menu-type{
+
+    #classic .menu-type {
         width: 285px;
     }
 }
 
-#classic .color-white{
+#classic .color-white {
     color: white;
 }
-#classic .up-text{
+
+#classic .up-text {
     height: 100px;
 }
-#classic .up{
+
+#classic .up {
     height: 100px;
 }
