--- a/css/about.css
+++ b/css/about.css
@@ -23,37 +23,8 @@
     margin: 0;
 }
 
-#about .title-position{
-    width: 100%;
-    margin: auto;
-    margin-top: 50px;
-    padding: 0 15px;
-}
 
-@media screen and (min-width:576px) {
-    #about .title-position {
-        max-width: 540px;
-    }
-}
 
-@media screen and (min-width:768px) {
-    #about .title-position {
-        max-width: 720px;
-    }
-}
-
-@media screen and (min-width:992px) {
-    #about .title-position {
-        max-width: 960px;
-    }
-
-}
-
-@media screen and (min-width:1200px) {
-    #about .title-position {
-        max-width: 1140px;
-    }
-}
 
 .black-sugar {
     aspect-ratio: 23 / 4;
@@ -67,7 +38,8 @@
 
 
 .container-about-us-title {
-    position: relative;
+    position: absolute;
+    top:5%;
     z-index: 2;
 }
 
