--- a/css/about.css
+++ b/css/about.css
@@ -26,7 +26,7 @@
 
 
 
-.black-sugar {
+#about .black-sugar {
     aspect-ratio: 23 / 4;
     background-image: url('../images/background_img/section_header.webp');
     background-color: transparent;
@@ -37,13 +37,13 @@
 }
 
 
-.container-about-us-title {
+#about .container-about-us-title {
     position: absolute;
     top:5%;
     z-index: 2;
 }
 
-.about-us-icon {
+#about .about-us-icon {
     background-image: url('../images/nav/icon1-1.png');
     background-size: contain;
     width: 32px;
@@ -52,40 +52,40 @@
     margin-right: 6px;
 }
 
-.about-us-tilte {
+#about .about-us-tilte {
     color: white;
     float: left;
 }
 
-.about-us-tilte h1,
+#about .about-us-tilte h1,
 h2 {
     font-size: 14px;
     font-weight: 500;
 }
 
-.about-us-tilte h1 {
+#about .about-us-tilte h1 {
     margin-bottom: 0;
 }
 
-.about-us-tilte h2 {
+#about .about-us-tilte h2 {
     margin-top: 0px;
     margin-bottom: 8px;
 }
 
-.about-card-group-container {
+#about .about-card-group-container {
     margin: 80px 0 0;
     z-index: 3;
     position: relative;
 }
 
-.about-card-group-text-animation-top {
+#about .about-card-group-text-animation-top {
     display: flex;
     flex-direction: column;
     margin-bottom: 60px;
     margin-right: 50px;
 }
 
-.about-card-group-text-animation-botton {
+#about .about-card-group-text-animation-botton {
     display: flex;
     flex-direction: column;
     margin-bottom: 60px;
@@ -102,7 +102,7 @@ h2 {
     }
 }
 
-.about-card-group-img {
+#about.about-card-group-img {
     margin: auto;
     width: 106px;
 }
@@ -114,7 +114,7 @@ h2 {
 
 }
 
-.about-card-group-text {
+#about .about-card-group-text {
     color: white;
 }
 
@@ -124,16 +124,16 @@ h2 {
     }
 }
 
-.about-card-group-text h2 {
+#about .about-card-group-text h2 {
     font-size: 20px;
     margin-top: 0;
 }
 
-.about-card-group-text p {
+#about .about-card-group-text p {
     font-size: 14px;
 }
 
-.cloud-left {
+#about .cloud-left {
     width: 100%;
     position: absolute;
     left: -100%;
@@ -141,7 +141,7 @@ h2 {
     z-index: 2;
 }
 
-.cloud-right {
+#about .cloud-right {
     width: 100%;
     position: absolute;
     top: 0;
@@ -165,7 +165,7 @@ h2 {
     opacity: 1;
 }
 
-.about-us-scroll-img {
+#about .about-us-scroll-img {
     width: 30vw;
     position: absolute;
     right: 3%;
