--- a/css/franchisee.css
+++ b/css/franchisee.css
@@ -10,18 +10,18 @@
     position: relative;
 }
 
-.franchisee-container-big {
+#franchisee .franchisee-container-big {
     width: 100%;
     margin: auto;
     padding: 50px;
 }
 
-.franchisee-container-animation {
+#franchisee .franchisee-container-animation {
     display: flex;
     justify-content: center;
 }
 
-.join-us-img {
+#franchisee .join-us-img {
     width: 400px;
     height: 100px;
     background-image: url('../images/franchisee/logo-Graphic.png');
@@ -29,12 +29,12 @@
     background-size: contain;
 }
 
-.join-us-img img {
+#franchisee .join-us-img img {
     width: 100px;
     height: 100px;
 }
 
-.join-us-info {
+#franchisee .join-us-info {
     display: flex;
     flex-direction: row;
     background-image: url('../images/franchisee/logo-Text.png');
@@ -60,7 +60,7 @@
     }
 }
 
-.join-us-info h2 {
+#franchisee .join-us-info h2 {
     margin-top: 75px;
     font-size: 18px;
     letter-spacing: 2px;
@@ -71,13 +71,13 @@
     animation: flashing 1.5s infinite;
 }
 
-.container-franchisee-title {
+#franchisee .container-franchisee-title {
     width: 100%;
     display: flex;
     flex-direction: column;
 }
 
-.franchisee-icon {
+#franchisee .franchisee-icon {
     background-image: url('../images/nav/icon1-5.png');
     background-size: cover;
     background-repeat: no-repeat;
@@ -86,19 +86,19 @@
     margin-right: 4px;
 }
 
-.franchisee-title {
+#franchisee .franchisee-title {
     color: white;
     display: flex;
     padding:  15px;
 }
 
-.franchisee-title h1 {
+#franchisee .franchisee-title h1 {
     font-size: 14px;
     margin-bottom: 0;
     margin-top: 5px;
 }
 
-.franchisee-title h2 {
+#franchisee .franchisee-title h2 {
     font-size: 12px;
     margin-top: 0;
 }
