--- a/css/news.css
+++ b/css/news.css
@@ -87,6 +87,10 @@
     justify-content: center;
 }
 
+#news .outer-card{
+    padding: 0 40px;
+}
+
 @media screen and (min-width: 1200px) {
     #news .swiper-slide .card {
         flex-direction: row;
@@ -185,7 +189,7 @@
 }
 
 #news .card-content {
-    height: 89.59px;
+    height: 89px;
 }
 
 #news .swiper-button3 {
@@ -207,10 +211,4 @@
 #news .swiper-margin {
     margin-left: 15px;
     margin-right: 15px;
-}
-
-#news .content {
-    overflow: hidden;
-    margin: auto;
-    max-width: 96%;
 }
