--- a/css/about.css
+++ b/css/about.css
@@ -19,6 +19,7 @@
 #about .about-header{
     height: 10vh;
     margin: 0;
+     padding-bottom:10%;
 }
 
 #about .black-sugar {
@@ -36,6 +37,7 @@
     top:5%;
     z-index: 2;
 }
+
 
 #about .about-us-icon {
     background-image: url('../images/nav/icon1-1.png');
