--- a/css/social.css
+++ b/css/social.css
@@ -123,7 +123,7 @@
   height: calc(100% - 2px) !important;
 }
 
-#social .swiper-button {
+#social .swiper-button-social {
   position: relative;
   bottom: 400px;
 }
@@ -144,6 +144,7 @@
   background: white;
   max-width: 540px;
   width: calc(100% - 2px);
+  height: 556px;
   border-radius: 3px;
   border: 1px solid rgb(219, 219, 219);
   box-shadow: none;
