--- a/css/distribution-confirm.css
+++ b/css/distribution-confirm.css
@@ -1,4 +1,5 @@
-#container{
+#distribution-confirm,
+#fillout-area{
     background-image: url('../images/distribution-confirm/bg_extra.png');
     background-size: cover;
     width: 100%;
