--- a/css/popwindow.css
+++ b/css/popwindow.css
@@ -1,15 +1,92 @@
-.pop-window-container {
+#pop-window {
     width: 100%;
+    height: 100%;
+    position: relative;
 }
 
-.pop-window-content {
-background-color: #222222;
-width: 1100px;
-
+#pop-window .container {
+    width: 100%;
+    margin: auto;
+    margin-top: 50px;
+    display: flex;
+    flex-direction: column;
+    padding: 0 15px;
 }
 
-.pop-window-close {
+#pop-window .pop-window-content {
+    background-color: #222222;
+    border: 2px solid #a38a77;
+    width: 1100px;
+    margin: auto;
+}
+
+#pop-window .pop-window-close {
     width: 80px;
     height: 80px;
     background-image: url(../img/light_closed.svg);
+    display: none;
+}
+
+#pop-window .pop-window-header {
+    width: 100%;
+}
+
+#pop-window .pop-window-title {
+    margin: 30px auto;
+    width: 84%;
+    display: flex;
+}
+
+#pop-window .pop-window-title-icon {
+    width: 32px;
+    height: 32px;
+    margin-right: 5px;
+    background-image: url(../img/distribution.svg);
+    background-size: cover;
+    background-repeat: no-repeat;
+}
+
+#pop-window .pop-window-title-text {}
+
+#pop-window .pop-window-title-text-chinese {
+    font-size: 14px;
+    font-weight: 300;
+    color: #ffffff;
+    line-height: 1.6;
+}
+
+#pop-window .pop-window-title-text-english {
+    font-size: 8px;
+    font-weight: 300;
+    color: #ffffff;
+    line-height: 1.6;
+}
+
+#pop-window .product-information-content {
+    
+}
+
+
+@media screen and (min-width:576px) {
+    #pop-window .container {
+        max-width: 540px;
+    }
+}
+
+@media screen and (min-width:768px) {
+    #pop-window .container {
+        max-width: 720px;
+    }
+}
+
+@media screen and (min-width:992px) {
+    #pop-window .container {
+        max-width: 960px;
+    }
+}
+
+@media screen and (min-width:1200px) {
+    #pop-window .container {
+        max-width: 1140px;
+    }
 }
