--- a/css/distribution-confirm.css
+++ b/css/distribution-confirm.css
@@ -128,7 +128,7 @@
     border: #FFFFFF 1px solid;
 }
 
-.swiper-button-distribution_container {
+#distribution-confirm .swiper-button-distribution_container {
     position: relative;
     bottom: 18px;
 }
@@ -155,4 +155,107 @@
 #distribution-confirm .swiper-button-next:after,
 #distribution-confirm .swiper-button-prev:after {
     display: none;
+}
+
+#distribution-confirm .direction-body {
+    width: 350px;
+    color: #fff;
+}
+
+#distribution-confirm .img-w-h-border-img {
+    width: 255px;
+    height: 276px;
+    background-image: url('/img/shop-img-border.png');
+    background-size: cover;
+    margin-bottom: 20px;
+    position: relative;
+    top: 10px;
+}
+
+#distribution-confirm .product-img {
+    width: calc(100% - 20px);
+    height: calc(100% - 20px);
+    position: absolute;
+    right: 11px;
+    top: 10px;
+}
+
+#distribution-confirm .ask-icon {
+    position: absolute;
+    width: 50px;
+    height: 50px;
+    right: 11px;
+    top: 10px;
+}
+
+#distribution-confirm .product-img-hover {
+    position: absolute;
+    width: calc(100% - 20px);
+    height: calc(100% - 20px);
+    outline: #ffe282 2px solid;
+    background-color: #000000;
+    opacity: 0.8;
+    right: 10px;
+    top: 10px;
+    opacity: 0;
+    transition: 1s;
+}
+
+#distribution-confirm .ask-icon-hover {
+    position: absolute;
+    width: 50px;
+    height: 50px;
+    right: 0px;
+    top: 0px;
+}
+
+#distribution-confirm .commodity-title {
+    height: 32px;
+    font-size: 20px;
+    margin-bottom: 15px;
+}
+
+#distribution-confirm .commodity-title-english {
+    height: 42px;
+    font-size: 14px;
+    margin-bottom: 20px;
+}
+
+#distribution-confirm .commodity-sort {
+    height: 32px;
+    font-size: 20px;
+}
+
+#distribution-confirm .commodity-title,
+#distribution-confirm .commodity-title-english,
+#distribution-confirm .commodity-sort {
+    display: flex;
+}
+
+#distribution-confirm .commodity-more-button.btn-more {
+    width: 124px;
+    height: 48px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    outline: #ffe282 3px solid;
+    color: #ffe282;
+    border-radius: 5px;
+    position: absolute;
+    top: calc(50% - 10px);
+    left: calc(50% - 65px);
+    font-size: 18px;
+}
+
+#distribution-confirm .img-w-h-border-img:hover .product-img-hover {
+    opacity: 0.8;
+
+}
+
+#distribution-confirm .ask-icon-hover {
+    position: absolute;
+    width: 50px;
+    height: 50px;
+    right: 0px;
+    top: 0px;
 }
