distribution-content-border-top-buttom

--- a/css/distribution-confirm.css
+++ b/css/distribution-confirm.css
@@ -4,7 +4,7 @@
     margin: 0;
 }
 
-#distribution_container {
+#distribution-container {
     background-image: url('../images/distribution-confirm/bg_extra.png');
     background-size: cover;
     width: 100%;
@@ -128,7 +128,7 @@
     border: #FFFFFF 1px solid;
 }
 
-#distribution-confirm .swiper-button-distribution_container {
+#distribution-confirm .swiper-button-distribution-container {
     position: relative;
     bottom: 18px;
 }
@@ -157,9 +157,17 @@
     display: none;
 }
 
+
+#distribution-confirm .card-container{
+    border-top: #FFFFFF 1px solid;
+    border-bottom: #FFFFFF 1px solid;
+}
+
+
 #distribution-confirm .direction-body {
     width: 350px;
     color: #fff;
+    margin-top: 50px;
 }
 
 #distribution-confirm .img-w-h-border-img {
