--- a/css/distribution-confirm.css
+++ b/css/distribution-confirm.css
@@ -4,7 +4,7 @@
     margin: 0;
 }
 
-#distribution_container {
+#distribution-container {
     background-image: url('../images/distribution-confirm/bg_extra.png');
     background-size: cover;
     width: 100%;
@@ -128,7 +128,7 @@
     border: #FFFFFF 1px solid;
 }
 
-#distribution-confirm .swiper-button-distribution_container {
+#distribution-confirm .swiper-button-distribution-container {
     position: relative;
     bottom: 18px;
 }
