--- a/css/popwindow.css
+++ b/css/popwindow.css
@@ -105,8 +105,8 @@
     height: 1px;
     background-color: #ffffff;
     position: absolute;
-    top:30px;
-    right:-10px;
+    top: 30px;
+    right: -10px;
     z-index: 100;
 }
 
@@ -209,6 +209,8 @@
 
 #pop-window .unit {
     font-size: 12px;
+    margin-left: 5px;
+    margin-right: 10px
 }
 
 
@@ -271,6 +273,8 @@
 .swiper {
     width: 100%;
     height: 100%;
+    display: flex;
+    flex-direction: column;
 }
 
 .swiper-slide {
@@ -327,4 +331,12 @@
     width: 100%;
     height: 100%;
     object-fit: cover;
+}
+
+#pop-window .swiper-button-next::after {
+    color: #fff;
+}
+
+#pop-window .swiper-button-prev::after {
+    color: #fff;
 }
