--- a/css/extra-distribution.css
+++ b/css/extra-distribution.css
@@ -8,7 +8,6 @@ body{
 
 .main{
     width: 100%;
-    height: 100vh;
     background-image: url(/images/background_img/bg_extra.png);
     background-repeat: no-repeat;
     background-size: cover;
@@ -96,8 +95,56 @@ body{
 .page-up-and-page-down-group{
     width: 20%;
     height: 20px;
-    color: aliceblue;
     display: flex;
     justify-content: space-between;
-    
+}
+.page-up,.page-1,.page-2,.page-down{
+    background-color: unset;
+    color: aliceblue;
+    border: 0;
+}
+
+/* 產品方格 */
+.product-group{
+    margin-top: 8%;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-gap: 20px;
+}
+.product-background{
+    width: 350px;
+    background-image: url(/img/shop-img-border.png);
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+.product-background img{
+    width: 100%;
+}
+.product{
+    position: relative;
+    width: 330px;
+    height: 360px;
+}
+.product img{
+    width: 100%;
+    position: absolute;
+    top: 10px;
+    left: 10px;
+}
+.product-info{
+    margin-top: 10%;
+}
+.product-title{
+    color: aliceblue;
+    font-size: 20px;
+    margin-bottom: 20px;
+}
+.product-title-en{
+    color: aliceblue;
+    font-size: 14px;
+    margin-bottom: 20px;
+}
+.product-id{
+    color: aliceblue;
+    font-size: 20px;
 }
