--- a/css/distribution-confirm.css
+++ b/css/distribution-confirm.css
@@ -1,7 +1,10 @@
 * {
     box-sizing: border-box;
-    padding: 0;
+}
+body{
+    background-color: #0C1219;
     margin: 0;
+    padding: 0;
 }
 
 a{
